Bug #37737 Maria: ma_test_loghandler_multiflush-t fails
Submitted: 30 Jun 2008 10:08 Modified: 18 Dec 2008 16:56
Reporter: Guilhem Bichot Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server: Maria storage engine Severity:S3 (Non-critical)
Version:6.0-maria OS:Solaris
Assigned to: Oleksandr Byelkin CPU Architecture:Any

[30 Jun 2008 10:08] Guilhem Bichot
Description:
on Solaris 10 amd64, tree 6.0-maria
../storage/maria/unittest/ma_test_loghandler_multiflush-t....1..70012
ok 1 - -- flush 9
...
ok 10761 - write records
Assertion failed: ((lsn) - (log_descriptor.sent_to_disk)) >= 0 || ((lsn) - (log_descriptor.log_start)) < 0, file ma_loghandler.c, line 2138

How to repeat:
see only once.

Suggested fix:
Test has been disabled because we don't know if it's correct and it fails for the first time in hundreds of times, it is random.
[15 Dec 2008 10:08] Bugs System
Pushed into 6.0.9-alpha  (revid:sanja@mysql.com-20080722234320-s9pbrqprpnhyrj4q) (version source revid:guilhem@mysql.com-20081213204800-0nubni3t4ihn4hv9) (pib:5)
[18 Dec 2008 16:56] Paul DuBois
Test case changes. No changelog entry needed.