Fix for BUG#37737. Fixed prev_last_lsn assignment.

storage/maria/ma_loghandler.c:
  Fix for BUG#37737:
   - buffer flush finish now can be done only in order
   - overlay processing fixed (no back direction bufferslocking now)
  Fixed prev_last_lsn assignment (now only for new buffer and only under buffer lock protection).